# speechd-up

./: .gitignore  ANNOUNCE  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  build.sh  configuration.c  configuration.h  configure.ac  configure.in  fdl.texi  log.c  log.h  options.c  options.h  speechd-up.c  speechd-up.conf  speechd-up.texi  version.sh
