dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

AC_LANG(C)

dnl progs
AC_PROG_CC

dnl info
AM_INIT_AUTOMAKE("speechd-up", "`cat version.sh|grep '^VERSION'|awk -F= '{print $2}'`")

AM_CONFIG_HEADER(config.h)

dnl Checks for libraries.
AC_CHECK_LIB(speechd,
        spd_open,,
        echo "*** Required speechd library missing! See INSTALL .";exit 1)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h sys/ioctl.h sys/time.h unistd.h libspeechd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

AC_ARG_VAR(pidpath, Absolute path to a pid file)

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(select socket)

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PROG_LIBTOOL

AC_OUTPUT([Makefile])
