dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

AC_LANG(C)

dnl progs
AC_PROG_CC

dnl info
AM_INIT_AUTOMAKE("speechd-up", "`cat version.sh|grep '^VERSION'|awk -F= '{print $2}'`")

AM_CONFIG_HEADER(config.h)


dnl Checks for libraries.
AC_CHECK_LIB(speechd,
        spd_set_data_mode,,
        echo "*** Required speechd library missing! See INSTALL .";exit 1)

AC_CHECK_LIB(dotconf,
        main, echo "",
        echo "*** Required DotConf library missing! See INSTALL .";exit 1)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h sys/ioctl.h sys/time.h unistd.h libspeechd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(select socket)

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PROG_LIBTOOL

dnl Variables, paths
AC_ARG_VAR(pidpath, Absolute path to a pid file)
AC_ARG_VAR(logpath, Absolute path to a log file)

dnl AC_SUBST(sysconfdir)

# by Marcelo Magallon <mmagallo@efis.ucr.ac.cr>
# Turn around -rpath problem with libtool
# This define should be improbable enough to not conflict with anything
case ${host} in
  *-pc-linux-gnu)
    AC_MSG_RESULT([Fixing libtool for -rpath problems.])
    sed < libtool > libtool-2 \
    's/^hardcode_libdir_flag_spec.*$/hardcode_libdir_flag_spec=" -D__LIBTOOL_IS_A_FOOL__ "/'
    mv libtool-2 libtool
    chmod 755 libtool
  ;;
esac

AC_OUTPUT([Makefile])
